--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -1231,29 +1231,24 @@
     <a href="/" class="homepage-link"><h1>Future Notes</h1></a>
     
     <nav class="desktop-nav">
-      <a href="/index" class="nav-link">Personal notes</a>
-      <a href="/group-notes" class="nav-link">Group notes</a>
-      <a href="/scheduler-page" class="nav-link active">Calendar</a>
-      <a href="/todo_page" class="nav-link">Todo</a>
+        <a href="/index" class="nav-link">Notes</a>
+        <a href="/scheduler-page" class="nav-link active">Calendar</a>
+        <a href="/todo_page" class="nav-link">Todo</a>
     </nav>
-
     <div id="storage-container" style="margin: 0px 100px;">
         <span id="storage-counter">0 / 0 MB</span>
         <div id="storage-bar-bg">
             <div id="storage-bar-fill"></div>
         </div>
     </div>
-    
     <div id="profile-pic" class="profile-pic no-picture"></div>
   </header>
   
-  <!-- Mobile Sub-Header -->
   <nav id="mobileSubHeader" class="mobile-sub-header">
-    <a href="/index" class="nav-link">Personal notes</a>
-    <a href="/group-notes" class="nav-link">Group notes</a>
+    <a href="/index" class="nav-link">Notes</a>
     <a href="/scheduler-page" class="nav-link active">Calendar</a>
     <a href="/todo_page" class="nav-link">Todo</a>
-  </nav>  
+  </nav>
 
   <div id="overlay"></div>
 
