--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -648,35 +648,30 @@
 
 
 <header>
-    <!-- Toggle button (only visible on mobile) -->
-    <button id="toggle-mobile-nav" class="toggle-mobile-nav">☰</button>
-    
-    <a href="/" class="homepage-link"><h1>Future Notes</h1></a>
-    
-    <nav class="desktop-nav">
-      <a href="/index" class="nav-link">Personal notes</a>
-      <a href="/group-notes" class="nav-link">Group notes</a>
-      <a href="/scheduler-page" class="nav-link">Calendar</a>
-      <a href="/todo_page" class="nav-link active">Todo</a>
-    </nav>
-
-    <div id="storage-container" style="margin: 0px 100px;">
-        <span id="storage-counter">0 / 0 MB</span>
-        <div id="storage-bar-bg">
-            <div id="storage-bar-fill"></div>
+        <div class="mobile-header">
+          <button id="toggle-mobile-nav" class="toggle-mobile-nav">☰</button>
         </div>
-    </div>
-    
-    <div id="profile-pic" class="profile-pic no-picture"></div>
-</header>
-  
-  <!-- Mobile Sub-Header -->
-  <nav id="mobileSubHeader" class="mobile-sub-header">
-    <a href="/index" class="nav-link">Personal notes</a>
-    <a href="/group-notes" class="nav-link">Group notes</a>
-    <a href="/scheduler-page" class="nav-link">Calendar</a>
-    <a href="/todo_page" class="nav-link active">Todo</a>
-  </nav>  
+      
+        <a href="/" class="homepage-link"><h1>Future Notes</h1></a>
+        <nav class="desktop-nav">
+            <a href="/index" class="nav-link">Notes</a>
+            <a href="/scheduler-page" class="nav-link">Calendar</a>
+            <a href="/todo_page" class="nav-link active">Todo</a>
+        </nav>
+        <div id="storage-container" style="margin: 0px 100px;">
+            <span id="storage-counter">0 / 0 MB</span>
+            <div id="storage-bar-bg">
+                <div id="storage-bar-fill"></div>
+            </div>
+        </div>
+        <div id="profile-pic" class="profile-pic no-picture"></div>
+      </header>
+      
+      <nav id="mobileSubHeader" class="mobile-sub-header">
+        <a href="/index" class="nav-link">Notes</a>
+        <a href="/scheduler-page" class="nav-link">Calendar</a>
+        <a href="/todo_page" class="nav-link active">Todo</a>
+      </nav>
 
   <div id="overlay"></div>
 
