--- a/pythonanywhere/templates/both_notes.html
+++ b/pythonanywhere/templates/both_notes.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#2c2c2c">
+<link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
+<link rel="favicon" type="image/x-icon" href="static/favicon.ico">
+<link rel="manifest" href="static/site.webmanifest">
 <title>Future Notes - Notes</title>
 <script src="/static/js/loader.js"></script>
 <style>
