Better split view

--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -24,6 +24,7 @@
             background-color: var(--hdr-color);
             padding: 20px;
             display: flex;
+            visibility: hidden;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -1783,7 +1784,6 @@
 
     <script src="/static/admin.js"></script>
     <script src="/static/custom-alert.js"></script>
-    <script src="/static/js/notifications.js"></script>
 
     <style>
         :root {
